Use icons to toggle between adding words and playing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="auth_succeeded">Login success.</string>
     <string name="new_word">+</string>
     <string name="submit">Submit</string>
+    <string name="hint_word">New Word</string>
+    <string name="hint_definition">Definition</string>
 </resources>
