[WIP] Add play activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="login">Login</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Memory Pop</string>
     <string name="title_activity_new_entry">NewEntry</string>
 </resources>
